# FPSGameEngine_OpenGL_Cpp

./: .gitignore  CMakeLists.txt  MODERN_OPENGL_GUIDE.md  imgui.ini  launch_trippy.sh  setup_graphics.sh
assets/models/Sword and Shield Pack/: X Bot.fbx  sheath sword 1.fbx  sheath sword 2.fbx  sword and shield 180 turn (2).fbx  sword and shield 180 turn.fbx  sword and shield attack (2).fbx  sword and shield attack (3).fbx  sword and shield attack (4).fbx  sword and shield attack.fbx  sword and shield block (2).fbx  sword and shield block idle.fbx  sword and shield block.fbx  sword and shield casting (2).fbx  sword and shield casting.fbx  sword and shield crouch block (2).fbx  sword and shield crouch block idle.fbx  sword and shield crouch block.fbx  sword and shield crouch idle.fbx  sword and shield crouch.fbx  sword and shield crouching (2).fbx  sword and shield crouching (3).fbx  sword and shield crouching.fbx  sword and shield death (2).fbx  sword and shield death.fbx  sword and shield idle (2).fbx  sword and shield idle (3).fbx  sword and shield idle (4).fbx  sword and shield idle.fbx  sword and shield impact (2).fbx  sword and shield impact (3).fbx  sword and shield impact.fbx  sword and shield jump (2).fbx  sword and shield jump.fbx  sword and shield kick.fbx  sword and shield power up.fbx  sword and shield run (2).fbx  sword and shield run.fbx  sword and shield slash (2).fbx  sword and shield slash (3).fbx  sword and shield slash (4).fbx  (+10 more)
include/: GameEngine.h  InputManager.h  PhysicsSystem.h  RenderSystem.h  camera.h  globals.h  godmode.h  models.h  movement.h  renderer.h
include/core/: globals.h  main.h  menu.h  modern_demo.h  trippy_visuals.h
include/editor/: editor.h
include/graphics/: lights.h  mesh.h  models.h  modern_renderer.h  shader.h
include/input/: editor_input.h  input.h  movement.h
include/models/: character.h
include/ui/: crosshair.h  cursor.h  fps_counter.h  imgui_interface.h
src/: GameEngine.cpp  InputManager.cpp  PhysicsSystem.cpp  RenderSystem.cpp  camera.cpp  crosshair.cpp  cursor.cpp  fragment_shader.glsl  glad.c  globals.cpp  godmode.cpp  lights.cpp  main.cpp  models.cpp  movement.cpp  renderer.cpp  vertex_shader.glsl
src/core/: game_launcher.cpp  globals.cpp  godmode.cpp  main.cpp  menu.cpp  modern_demo.cpp  trippy_visuals.cpp  trippy_visuals_basic.cpp  trippy_visuals_simple.cpp
src/editor/: editor.cpp
src/graphics/: character.cpp  lights.cpp  mesh.cpp  models.cpp  modern_renderer.cpp  renderer.cpp  shader.cpp
src/input/: editor_input.cpp  movement.cpp
src/shaders/: modern_fragment.glsl  modern_vertex.glsl
src/ui/: crosshair.cpp  cursor.cpp  fps_counter.cpp  imgui_interface.cpp
tests/: CMakeLists.txt  editor_test.cpp  fps_counter_test.cpp  movement_test.cpp
